初始化框架(未完成)

--- a/parse-swagger/pom.xml
+++ b/parse-swagger/pom.xml
@@ -128,6 +128,11 @@
             <artifactId>aspectjtools</artifactId>
             <version>1.9.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20171018</version>
+        </dependency>
 
     </dependencies>
 
